Added License and README-text

--- a/README
+++ b/README
@@ -2,3 +2,28 @@ Some tools for GNuPGP (GPG):
  - Schlüsselwärter:
  	A program to clean up an manage your keyring
  - more comming soon…
+
+
+== Schlüsselwärter ==
+A program to clean up an manage your keyring.
+Features:
+ - remove expired keys
+ - remove revoked keys
+ - remove not-valid keys, optional with given level
+ - remove not-trusted keys, optional with given level
+ - AND or OR mode for key choosing
+ - secret key will not be toutched
+Note: the name is temporary an might change in future.
+
+Dependecies:
+ - GPG
+ - GPGME
+ - C++-compiler (I used g++) and GPGME-devel-packages for compiling
+How to compile:
+ - g++ schluesselwaerter.cpp -lgpgme
+How to install:
+ - Copy file to /usr/bin or other directory in PATH-variable
+
+Copyright & License:
+ - Copyright: Michael F. Schönitzer; 2011
+ - GNU Lesser General Public License version 3 or newer (LGPLv3+)
