- added count of deleted keys - fixed bug: not trying to delete key again if two criteria mach - TODO up2date

--- a/TODO
+++ b/TODO
@@ -1,4 +1,3 @@
-- Quiet + (realqiet?) mode
-- Count number of deleted keys
+- Quiet + (realquiet?) mode
 - Keyserver sync
-
+- clean up unnecessary code
