Strings, i18n, deutsche Übersetzung und TODO-Liste überarbeitet

--- a/TODO
+++ b/TODO
@@ -1,3 +1,7 @@
 - Keyserver sync
 - remove unnecessary code (ok?)
 - clean up code (ok?)
+- Backup funktion
+- Sicherheits Rückfrage
+-- Option '-y'
+- dry-mode
