--- a/schluesselwaerter/TODO
+++ b/schluesselwaerter/TODO
@@ -2,8 +2,7 @@
 - remove unnecessary code (ok?)
 - clean up code (ok?)
 - improve Backup funktion
-  - support ~
-  - support relative paths
   - create dictory if not exists
-- dry-mode
 - clean up error-codes
+- support file with keyids as test
+- support exclude-file with keyids as test
