--- a/schluesselwaerter/TODO
+++ b/schluesselwaerter/TODO
@@ -5,4 +5,5 @@
   - test if file already exists
 - clean up error-codes!
 - support exclude-file with keyids as test
-- more usefull question
+- more usefull question (ok)
+
