--- a/gpgkeymgr/README
+++ b/gpgkeymgr/README
@@ -1,4 +1,4 @@
-Schluesselwaerter
+GPGKEYMGR
 
 With this program you can remove unnecessary keys from your keyring following given criteria.
 Features:
