--- a/gpgkeymgr/gpgkeymgr.1
+++ b/gpgkeymgr/gpgkeymgr.1
@@ -75,7 +75,7 @@ Delete all keys wich are not valid and I don't trust:
 .IP 
 gpgkeymgr \-v \-t
 .PP 
-First backup keyring, then delete all keys wich are not compelty valid:
+First backup keyring, then delete all keys witch are not completely valid:
 .PP 
 .IP 
 gpgkeymgr \-b \-v 3
