--- a/gpgkeymgr/CHANGES
+++ b/gpgkeymgr/CHANGES
@@ -2,10 +2,12 @@ Note:
 .x-Version means the current developing-branch
 
 Version 0.2.0 -> 0.2.x
++ added frensh translations
++ backup-dir can be given as argument
+- using preprocessor insted of sed to realize portable version
 - using getopt for argument handling
  -> fixed some bugs
  -> improved code readability
-- backup-dir can be given as argument
 - give return-value 3 if backup fails
 
 before Version 0.2.0
