-translated mapage to german -fixed little bug in manpage

--- a/gpgkeymgr/manpages/gpgkeymgr.1
+++ b/gpgkeymgr/manpages/gpgkeymgr.1
@@ -11,7 +11,9 @@ gpgkeymgr \- manage you GPG keyring
 .PP 
 A program to clean up an manage your keyring.
 .PP 
-.PP TEST is one of:.PP 
+.PP
+TEST is one of:
+.PP 
 .TP 
 \fB\-r\fR
 remove revoked keys
