--- a/gpgkeymgr/manpages/gpgkeymgr.1
+++ b/gpgkeymgr/manpages/gpgkeymgr.1
@@ -1,4 +1,4 @@
-.TH "gpgkeymgr" "1" "0.2" "Michael Schoenitzer" "User Commands"
+.TH "gpgkeymgr" "1" "0.3" "Michael Schoenitzer" "User Commands"
 .SH "NAME"
 gpgkeymgr \- manage you GPG keyring
 .SH "SYNOPSIS"
@@ -46,8 +46,8 @@ Other options:
 .PP 
 
 .TP 
-\fB\-b\fR
-backup public keyring to user given directory
+\fB\-b\fR \fI[DIR]\fR
+backup public keyring to directory [DIR], if none is given, he will ask for input.
 .TP 
 \fB\-o\fR
 remove key already if one given criteria is matching
