--- a/gpgkeymgr/manpages/gpgkeymgr-de.1
+++ b/gpgkeymgr/manpages/gpgkeymgr-de.1
@@ -1,4 +1,4 @@
-.TH "gpgkeymgr" "1" "0.3" "Michael Schoenitzer" "User Commands"
+.TH "gpgkeymgr" "1" "0.4" "Michael Schoenitzer" "User Commands"
 .SH "NAME"
 gpgkeymgr \- verwalte deinen GnuPG Schlüsselbund
 .SH "SYNTAX"
@@ -61,6 +61,9 @@ Alle Fragen mit ja beantworten
 .TP 
 \fB\-d\fR
 Nichts wirklich tun (Simulationsmodus)
+.TP 
+\fB\-s\fR
+Zeige einige Statistiken zum Schlüsselring
 .TP 
 \fB\-h\fR
 Hilfstext anzeigen
