--- a/gpgkeymgr/manpages/gpgkeymgr.1
+++ b/gpgkeymgr/manpages/gpgkeymgr.1
@@ -1,4 +1,4 @@
-.TH "gpgkeymgr" "1" "0.3" "Michael Schoenitzer" "User Commands"
+.TH "gpgkeymgr" "1" "0.4" "Michael Schoenitzer" "User Commands"
 .SH "NAME"
 gpgkeymgr \- manage you GPG keyring
 .SH "SYNOPSIS"
@@ -60,6 +60,9 @@ answer all questions with yes
 .TP 
 \fB\-d\fR
 don't really do anything \- just simulate
+.TP 
+\fB\-s\fR
+show some statistics about keyring
 .TP 
 \fB\-h\fR
 print help\-text
