--- a/gpgkeymgr/translations/gpgkeymgr-fr_FR.po
+++ b/gpgkeymgr/translations/gpgkeymgr-fr_FR.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: gpgkeymgr\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2013-04-13 14:00+0200\n"
-"PO-Revision-Date: 2013-04-13 14:11+0100\n"
-"Last-Translator: Michael F. Schönitzer <mcihael@schoenitzer.de>\n"
+"PO-Revision-Date: 2013-04-19 14:11+0100\n"
+"Last-Translator: Jean-Jacques Brucker <jeanjacquesbrucker@gmail.com>\n"
 "Language-Team: France\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
@@ -59,7 +59,7 @@ msgstr "Suppression de(s) clé(s) %i\n"
 
 #: gpgkeymgr.cpp:46
 msgid "Developement Version"
-msgstr ""
+msgstr "Veersion de Développement"
 
 #: gpgkeymgr.cpp:501
 msgid "Directory does not exist. Create?"
@@ -75,7 +75,7 @@ msgstr "Ne rien faire réellement (simulation)"
 
 #: gpgkeymgr.cpp:445
 msgid "Failed to open "
-msgstr "Impossible d'ouvrir: "
+msgstr "Impossible d'ouvrir : "
 
 #: gpgkeymgr.cpp:526
 msgid "File "
@@ -88,7 +88,7 @@ msgstr "GPG-Version: %s\n"
 
 #: gpgkeymgr.cpp:317
 msgid "Left-to-Right: Trust"
-msgstr ""
+msgstr "Gauche-à-Droite: Confiance"
 
 #: gpgkeymgr.cpp:613
 msgid ""
@@ -100,23 +100,23 @@ msgstr ""
 
 #: gpgkeymgr.cpp:347
 msgid "Number keys: "
-msgstr ""
+msgstr "Nombres de clés : "
 
 #: gpgkeymgr.cpp:346
 msgid "Number of expired keys: "
-msgstr ""
+msgstr "Nombre de clés expirées : "
 
 #: gpgkeymgr.cpp:345
 msgid "Number of revoked keys: "
-msgstr ""
+msgstr "Nombre de clés revoquées : "
 
 #: gpgkeymgr.cpp:624
 msgid "Print statistics"
-msgstr ""
+msgstr "Affiche des statistiques"
 
 #: gpgkeymgr.cpp:625
 msgid "Print this help and exit"
-msgstr ""
+msgstr "Affiche juste cette aide"
 
 #: gpgkeymgr.cpp:227
 #, c-format
@@ -129,7 +129,7 @@ msgstr "Skipping secret key"
 
 #: gpgkeymgr.cpp:316
 msgid "Statistics:"
-msgstr ""
+msgstr "Statistiques:"
 
 #: gpgkeymgr.cpp:556
 msgid "Successfully backuped pubring.gpg and pubring.kbx"
@@ -137,7 +137,7 @@ msgstr "Sauvegarde de pubring.gpg et pubring.kbx réussie."
 
 #: gpgkeymgr.cpp:322 gpgkeymgr.cpp:333
 msgid "Sum"
-msgstr ""
+msgstr "Somme"
 
 #: gpgkeymgr.cpp:626
 msgid "TESTs: "
@@ -149,7 +149,7 @@ msgstr "Mauvais format d'UID, ignoré"
 
 #: gpgkeymgr.cpp:318
 msgid "Up-To-Down: Validity"
-msgstr ""
+msgstr "Haut-en-Bas: Validité"
 
 #: gpgkeymgr.cpp:615
 msgid "Use: "
@@ -161,7 +161,7 @@ msgstr "Version: "
 
 #: gpgkeymgr.cpp:268
 msgid "Warning: Some keys have validity  or trust biger than 5."
-msgstr ""
+msgstr "Attention: certaines clés ont un niveau de confiance supérieur à 5"
 
 #: gpgkeymgr.cpp:547
 msgid "Where should I put the backup? (Directory must exist) "
