added option -e to exclude uids from file fixed major bug fixed several small bugs

--- a/gpgkeymgr/TODO
+++ b/gpgkeymgr/TODO
@@ -2,7 +2,9 @@ Smaller Tasks:
 - fix return value of remove_key (int <-> bool)
 - better make clean
 
+
 Bigger Tasks:
+- use autotools
 - new option - support exclude-file with keyids as test
 - new option - also remove secret keys
 - Keyserver sync
