--- a/README
+++ b/README
@@ -1,21 +1,18 @@
-Some tools for GNuPGP (GPG):
- - gpgkeymgr
- 	A program to clean up an manage your keyring
- - more comming soon…
+GPGKEYMGR – clean up an manage your gnupg keyring
 
-
-== gpgkeymgr ==
-A program to clean up an manage your keyring.
+With this program you can remove unnecessary keys from your keyring following given criteria.
 Features:
  - remove expired keys
  - remove revoked keys
  - remove not-valid keys, optional with given level
  - remove not-trusted keys, optional with given level
+ - remove key listed in a file
  - AND or OR mode for key choosing
  - backup keyring
- - secret key will not be toutched
+ - secret key will not be touched
  - support for translations
 
-Copyright & License:
- - Copyright: Michael F. Schönitzer; 2011
- - GNU Lesser General Public License version 3 or newer (LGPLv3+)
+For information about how to install, please read 'INSTALL' file.
+
+This is free Software released under the LGPLv3,
+see the file 'LICENSE' for an copy of the full license.
